--- a/src/View/ViewSlider/ViewSlider.sass
+++ b/src/View/ViewSlider/ViewSlider.sass
@@ -1,10 +1,10 @@
-.slider-app
+.my-slider-custom-app
   display: flex
   justify-content: center
   width: 100%
   height: 100%
 
-.slider-app__view
+.my-slider-custom-app__view
   position: relative
   width: 25%
   height: 15%
