responsiveness requirements have been met

--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -6,5 +6,10 @@
 @import "src/View/ViewSlider/ViewThumb/ViewThumb.sass"
 @import "src/View/ViewSlider/ViewScaleContainer/ViewScaleTrack/ViewScaleTrack.sass"
 @import "src/View/ViewSlider/ViewScaleContainer/ViewScaleBackline/ViewScaleBackline.sass"
-@import "src/View/ViewController/ViewControllerContainer/ViewControllerContainer.sass"
-@import "src/View/ViewController/ThumbPositionController/ThumbPositionController.sass"
+@import "src/View/ViewController/ViewController.sass"
+@import "../View/ViewController/ThumbPositionController/ThumbPositionControllerContent/ThumbPositionControllerContent"
+@import "src/View/ViewController/ThumbPositionController/ThumbPositionControllerContainer/ThumbPositionControllerContainer.sass"
+@import "src/View/ViewController/ScalePositionController/ScalePositionControllerContainer/ScalePositionControllerContainer.sass"
+@import "src/View/ViewSlider/ViewValues/ViewValuesMaxMin/ViewValuesMaxMin.sass"
+@import "src/View/ViewSlider/ViewValues/ViewValuesMaxMin/ViewValueMin/ViewValuesMin.sass"
+@import "src/View/ViewSlider/ViewValues/ViewValuesMaxMin/ViewValueMax/ViewValuesMax.sass"
