--- a/src/View/ViewSlider/ViewThumb/ViewThumb.sass
+++ b/src/View/ViewSlider/ViewThumb/ViewThumb.sass
@@ -8,3 +8,15 @@
   cursor: pointer
   top: -3px
   z-index: 5
+
+.topThumb, .bottomThumb
+  width: auto
+  height: 21px
+  border-radius: 4px
+  background-color: #e8e8e8
+  position: absolute
+  top: -30px
+  padding: 0 3px
+
+.bottomThumb
+  top: 34px
