onmouseup problem is not solved

--- a/src/View/ViewSlider/ViewValues/ViewValuesMaxMin/ViewValueMin/ViewValuesMin.sass
+++ b/src/View/ViewSlider/ViewValues/ViewValuesMaxMin/ViewValueMin/ViewValuesMin.sass
@@ -6,3 +6,6 @@
   border-radius: 4px
   background-color: #e8e8e8
   text-align: center
+  -webkit-transition-property: opacity
+  -webkit-transition-duration: 0.5s
+  -webkit-transition-timing-function: ease
