--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -4,6 +4,7 @@
 @import "../View/ViewSlider/ViewScaleContainer/ViewScaleContainer"
 @import "src/View/ViewSlider/ViewScaleContainer/ViewScale/ViewScale.sass"
 @import "src/View/ViewSlider/ViewThumb/ViewThumb.sass"
+@import "src/View/ViewSlider/ViewThumb/ViewTumbsContainer/ViewThumbsContainer.sass"
 @import "src/View/ViewSlider/ViewScaleContainer/ViewScaleTrack/ViewScaleTrack.sass"
 @import "src/View/ViewSlider/ViewScaleContainer/ViewScaleBackline/ViewScaleBackline.sass"
 @import "src/View/ViewController/ViewController.sass"
@@ -13,3 +14,12 @@
 @import "src/View/ViewSlider/ViewValues/ViewValuesMaxMin/ViewValuesMaxMin.sass"
 @import "src/View/ViewSlider/ViewValues/ViewValuesMaxMin/ViewValueMin/ViewValuesMin.sass"
 @import "src/View/ViewSlider/ViewValues/ViewValuesMaxMin/ViewValueMax/ViewValuesMax.sass"
+@import "src/View/ViewSlider/ViewRuler/ViewRuler.sass"
+@import "src/View/ViewSlider/ViewRuler/ViewRulerContainer/ViewRulerContainer.sass"
+@import "src/View/ViewSlider/ViewScaleContainer/ViewScaleContainer.sass"
+
+body
+  -ms-user-select: none
+  -moz-user-select: none
+  -khtml-user-select: none
+  -webkit-user-select: none
