--- a/src/View/ViewSlider/ViewScaleContainer/ViewScale/ViewScale.sass
+++ b/src/View/ViewSlider/ViewScaleContainer/ViewScale/ViewScale.sass
@@ -1,13 +1,7 @@
 .view__scale
+  position: absolute
   width: 100%
   height: 8.4px
-  position: absolute
-  top: 0
-  bottom: 0
-  margin: 0
-  outline: none
-  -webkit-appearance: none
-  -moz-appearance: none
-  appearance: none
+  border-radius: 4px
+  top: 25%
   z-index: 3
-  background: transparent
