--- a/src/View/ViewSlider/ViewScaleContainer/ViewScaleBackline/ViewScaleBackline.sass
+++ b/src/View/ViewSlider/ViewScaleContainer/ViewScaleBackline/ViewScaleBackline.sass
@@ -1,7 +1,8 @@
-.view__scale-backline
-  position: relative
+.view__scale-backLine
+  position: absolute
   width: 100%
   height: 8.4px
-  outline: none
   background-color: #3e3e3e17
   border-radius: 4px
+  top: 25%
+  z-index: 1
