--- a/src/View/ViewSlider/ViewScaleContainer/ViewScaleContainer.sass
+++ b/src/View/ViewSlider/ViewScaleContainer/ViewScaleContainer.sass
@@ -1,6 +1,4 @@
 .view__scale-container
   position: relative
+  width: 100%
   height: 25px
-  display: flex
-  justify-content: center
-  align-items: center
