--- a/src/View/ViewSlider/ViewScaleContainer/ViewScaleTrack/ViewScaleTrack.sass
+++ b/src/View/ViewSlider/ViewScaleContainer/ViewScaleTrack/ViewScaleTrack.sass
@@ -1,8 +1,8 @@
 .view__scale-track
+  position: absolute
   width: 100%
   height: 8.4px
-  position: absolute
-  top: 0
-  bottom: 0
-  margin: 0
-  z-index: 1
+  border-radius: 4px
+  top: 25%
+  z-index: 2
+  background-color: rebeccapurple
