--- a/src/View/ViewSlider/ViewThumb/ViewThumb.sass
+++ b/src/View/ViewSlider/ViewThumb/ViewThumb.sass
@@ -11,12 +11,15 @@
 
 .topThumb, .bottomThumb
   width: auto
+  min-width: 24px
   height: 21px
   border-radius: 4px
   background-color: #e8e8e8
   position: absolute
   top: -30px
+  left: -2px
   padding: 0 3px
+  text-align: center
 
 .bottomThumb
   top: 34px
