--- a/src/View/ViewSlider/ViewRuler/ViewRuler.sass
+++ b/src/View/ViewSlider/ViewRuler/ViewRuler.sass
@@ -8,7 +8,22 @@
   height: 10px
 
 .rulerMarkBig
+  border-left: 1px solid black
+  height: 15px
+  margin: 0
+  padding: 0
+  font-size: 24px
+
+.rulerMarkMiddle
+  border-left: 1px solid black
+  height: 10px
+  margin: 0
+  padding: 0
   font-size: 24px
 
 .rulerMarkSmall
+  border-left: 0.5px solid black
+  height: 5px
+  margin: 0
+  padding: 0
   font-size: 12px
