control inputs refactored, fonts montserrat added

--- a/src/View/ViewController/ThumbPositionController/ThumbPositionControllerContent/ThumbPositionControllerContent.sass
+++ b/src/View/ViewController/ThumbPositionController/ThumbPositionControllerContent/ThumbPositionControllerContent.sass
@@ -1,7 +1,13 @@
-span
+/*span
   cursor: pointer
   .number
     margin: 100px
+
+.input-control
+    display: flex
+
+h5
+    margin: 0
 
 .input-minus, .input-plus
     width: 20px
@@ -10,17 +16,15 @@ span
     border-radius: 4px
     padding: 8px 5px 8px 5px
     border: 1px solid #ddd
-    display: inline-block
     vertical-align: middle
     text-align: center
     font-weight: bold
 
-input
+.view__thumb-input
     height: 34px
     width: 100px
     text-align: center
     font-size: 26px
     border: 1px solid #ddd
     border-radius: 4px
-    display: inline-block
     vertical-align: middle
