--- a/src/View/ViewSlider/ViewThumb/ViewThumb.sass
+++ b/src/View/ViewSlider/ViewThumb/ViewThumb.sass
@@ -1,12 +1,12 @@
 .view__thumb
   position: absolute
-  width: 25px
-  height: 25px
-  background-color: white
-  border-radius: 50%
-  border: 3px solid black
+  width: 3px
+  height: 20px
+  background-color: red
+  border-radius: 4px
+  border: 2px solid black
   cursor: pointer
-  top: -3px
+  top: -1px
   z-index: 5
 
 .handle-dragging
@@ -19,8 +19,8 @@
   border-radius: 4px
   background-color: #e8e8e8
   position: absolute
-  top: -30px
-  left: -2px
+  top: -31px
+  left: -14px
   padding: 0 3px
   text-align: center
 
