--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -1,4 +1,5 @@
 @import "src/index.sass"
+@import "src/fonts/fonts.sass"
 @import "src/View/ViewSlider/ViewSlider.sass"
 @import "src/View/ViewSlider/ViewScaleContainer/ViewScaleContainer.sass"
 @import "../View/ViewSlider/ViewScaleContainer/ViewScaleContainer"
@@ -8,6 +9,7 @@
 @import "src/View/ViewSlider/ViewScaleContainer/ViewScaleTrack/ViewScaleTrack.sass"
 @import "src/View/ViewSlider/ViewScaleContainer/ViewScaleBackline/ViewScaleBackline.sass"
 @import "src/View/ViewController/ViewController.sass"
+@import "src/View/ViewController/ControlElement/ControlElement.sass"
 @import "../View/ViewController/ThumbPositionController/ThumbPositionControllerContent/ThumbPositionControllerContent"
 @import "src/View/ViewController/ThumbPositionController/ThumbPositionControllerContainer/ThumbPositionControllerContainer.sass"
 @import "src/View/ViewController/ScalePositionController/ScalePositionControllerContainer/ScalePositionControllerContainer.sass"
