--- a/src/View/ViewSlider/ViewScaleContainer/ViewScaleTrack/ViewScaleTrack.sass
+++ b/src/View/ViewSlider/ViewScaleContainer/ViewScaleTrack/ViewScaleTrack.sass
@@ -2,7 +2,6 @@
   position: absolute
   width: 100%
   height: 8.4px
-  border-radius: 4px
   top: 25%
   z-index: 2
-  background-color: rebeccapurple
+  background-color: blue
