--- a/src/View/ViewController/ControlElement/ControlElement.sass
+++ b/src/View/ViewController/ControlElement/ControlElement.sass
@@ -1,6 +1,9 @@
 .input-control__title
+  font-family: Montserrat, sans-serif
   font-size: 12px
-  margin: 0 0 3px 0
+  font-weight: 600
+  margin: 0
+  width: 40px
 
 .input-control__element
   display: flex
@@ -16,15 +19,18 @@
   border-radius: 4px
   border: 1px solid #ddd
   text-align: center
-  font-weight: bold
+  font-family: Material Icons, sans-serif
+  font-size: 16px
+  font-weight: 600
   cursor: pointer
 
 .control-input__value
   height: 20px
   width: 60px
   text-align: center
-  font-family: "Montserrat"
-  font-size: 16px
+  font-family: Montserrat, sans-serif
+  font-size: 13px
+  font-weight: 600
   border: 1px solid #ddd
   border-radius: 4px
   padding: 0
