--- a/src/fonts/fonts.sass
+++ b/src/fonts/fonts.sass
@@ -29,3 +29,19 @@
 @font-face
     font-family: 'Montserrat'
     src: url(../../src/fonts/montserrat/Montserrat-Regular.svg) format('svg')
+
+@font-face
+    font-family: 'Material Icons'
+    src: url('../../src/fonts/material/MaterialIcons-Regular.woff2') format('woff2')
+
+@font-face
+    font-family: 'Material Icons'
+    src: url('../../src/fonts/material/MaterialIcons-Regular.woff') format('woff')
+
+@font-face
+    font-family: 'Material Icons'
+    src: url('../../src/fonts/material/MaterialIcons-Regular.ttf') format('truetype')
+
+@font-face
+    font-family: 'Material Icons'
+    src: url('../../src/fonts/material/MaterialIcons-Regular.svg') format('svg')
