--- a/src/View/ViewController/ThumbPositionController/ThumbPositionControllerContainer/ThumbPositionControllerContainer.sass
+++ b/src/View/ViewController/ThumbPositionController/ThumbPositionControllerContainer/ThumbPositionControllerContainer.sass
@@ -3,3 +3,16 @@
   flex-wrap: nowrap
   flex-direction: column
   align-items: self-start
+  margin-bottom: 40px
+  margin-right: 30px
+
+.thumb-input-container
+  display: flex
+  align-items: center
+  margin-bottom: 1px
+
+.view__thumb-input-container__title
+  font-family: Montserrat, sans-serif
+  font-size: 12px
+  font-weight: 800
+  margin-bottom: 10px
