--- a/src/View/ViewSlider/ViewThumb/ViewThumb.sass
+++ b/src/View/ViewSlider/ViewThumb/ViewThumb.sass
@@ -13,6 +13,9 @@
   z-index: 7
 
 .topThumb, .bottomThumb
+  display: flex
+  justify-content: center
+  align-items: center
   width: auto
   min-width: 24px
   height: 21px
@@ -22,6 +25,9 @@
   top: -31px
   left: -14px
   padding: 0 3px
+  font-family: Montserrat, sans-serif
+  font-size: 14px
+  font-weight: 500
   text-align: center
 
 .bottomThumb
