--- a/src/View/ViewSlider/ViewValues/ViewValuesMaxMin/ViewValueMin/ViewValuesMin.sass
+++ b/src/View/ViewSlider/ViewValues/ViewValuesMaxMin/ViewValueMin/ViewValuesMin.sass
@@ -1,10 +1,16 @@
 .view__min-container, .view__max-container
+  display: flex
+  justify-content: center
+  align-items: center
   width: auto
   min-width: 20px
   height: 20px
   padding: 0 3px
   border-radius: 4px
   background-color: #e8e8e8
+  font-family: Montserrat, sans-serif
+  font-size: 14px
+  font-weight: 500
   text-align: center
   -webkit-transition-property: opacity
   -webkit-transition-duration: 0.2s
