inputs refactor in progress

--- a/src/View/ViewController/ScalePositionController/ScalePositionControllerContainer/ScalePositionControllerContainer.sass
+++ b/src/View/ViewController/ScalePositionController/ScalePositionControllerContainer/ScalePositionControllerContainer.sass
@@ -1,3 +1,13 @@
 .scale__position-controller-content
   display: flex
   flex-wrap: nowrap
+  flex-direction: column
+  margin-bottom: 40px
+  margin-right: 30px
+
+.scale__position-controller-content__title
+  font-family: Montserrat, sans-serif
+  font-size: 12px
+  font-weight: 800
+  margin-bottom: 10px
+
