--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -9,10 +9,11 @@
 @import "src/View/ViewSlider/ViewScaleContainer/ViewScaleTrack/ViewScaleTrack.sass"
 @import "src/View/ViewSlider/ViewScaleContainer/ViewScaleBackline/ViewScaleBackline.sass"
 @import "src/View/ViewController/ViewController.sass"
-@import "src/View/ViewController/ControlElement/ControlElement.sass"
+@import "../View/ViewController/ControlElements/ControlInputElement/ControlInputElement"
 @import "../View/ViewController/ThumbPositionController/ThumbPositionControllerContent/ThumbPositionControllerContent"
 @import "src/View/ViewController/ThumbPositionController/ThumbPositionControllerContainer/ThumbPositionControllerContainer.sass"
 @import "src/View/ViewController/ScalePositionController/ScalePositionControllerContainer/ScalePositionControllerContainer.sass"
+@import "src/View/ViewController/ScalePositionController/ScalePositionControllerContent/ScalePositionControllerContent.sass"
 @import "src/View/ViewSlider/ViewValues/ViewValuesMaxMin/ViewValuesMaxMin.sass"
 @import "src/View/ViewSlider/ViewValues/ViewValuesMaxMin/ViewValueMin/ViewValuesMin.sass"
 @import "src/View/ViewSlider/ViewValues/ViewValuesMaxMin/ViewValueMax/ViewValuesMax.sass"
