--- a/src/View/ViewController/ControlElements/ControlInputElement/ControlInputElement.sass
+++ b/src/View/ViewController/ControlElements/ControlInputElement/ControlInputElement.sass
@@ -3,10 +3,11 @@
   font-size: 12px
   font-weight: 600
   margin: 0
-  width: 40px
+  min-width: 30px
 
 .input-control__element
   display: flex
+  margin-left: 15px
 
 .input-control__value-minus,
 .input-control__value-plus
@@ -18,10 +19,10 @@
   background: #f2f2f2
   border-radius: 4px
   border: 1px solid #ddd
-  text-align: center
   font-family: Material Icons, sans-serif
   font-size: 16px
   font-weight: 600
+  line-height: 10px
   cursor: pointer
 
 .control-input__value
