inputs refactor in progress had continued

--- a/src/View/ViewController/ControlElements/ControlInputElement/ControlInputElement.sass
+++ b/src/View/ViewController/ControlElements/ControlInputElement/ControlInputElement.sass
@@ -5,7 +5,7 @@
   font-size: 12px
   font-weight: 600
   margin: 0
-  min-width: 165px
+  min-width: 170px
 
 .thumb-input__element,
 .scale-input__element
@@ -46,7 +46,7 @@
   padding: 0
 
 .control-input-selectable,
-.control-input-displayed__value
+.scale-input-value_displayed
   height: 20px
   width: 80px
   text-align: center
@@ -57,13 +57,13 @@
   border-radius: 4px
   padding: 0
 
-.control-input-displayed__value
-  width: 100px
+.scale-input-value_displayed
+  width: 103px
 
-.thumb-input__element_colorable-container
+.thumb-input__element_colorable-container,
 .scale-input__element-container
-  width: 20px
-  height: 20px
+  width: 22px
+  height: 22px
   display: flex
   flex-direction: column
   align-items: center
