inputs refactor in progress had continued

--- a/src/View/ViewController/ThumbPositionController/ThumbPositionControllerContainer/ThumbPositionControllerContainer.sass
+++ b/src/View/ViewController/ThumbPositionController/ThumbPositionControllerContainer/ThumbPositionControllerContainer.sass
@@ -10,8 +10,11 @@
   display: flex
   align-items: center
 
-.view__thumb-input-container__title
+.view__thumb-input-container__title,
+.view__scale-input-container__title,
+.view__slider-input-container__title
   font-family: Montserrat, sans-serif
   font-size: 12px
   font-weight: 800
   margin-bottom: 10px
+  text-transform: uppercase
