--- a/src/View/ViewController/ControlElements/ControlInputElement/ControlInputElement.sass
+++ b/src/View/ViewController/ControlElements/ControlInputElement/ControlInputElement.sass
@@ -1,6 +1,7 @@
 .thumb-input__element-title,
 .input-control__title,
-.scale-input__element-title
+.scale-input__element-title,
+.slider-input__element-title
   font-family: Montserrat, sans-serif
   font-size: 12px
   font-weight: 600
@@ -8,9 +9,24 @@
   min-width: 170px
 
 .thumb-input__element,
-.scale-input__element
+.scale-input__element,
+.slider-input__element
+  display: flex
+  align-items: center
+
+.thumb-input__element_changeable,
+.thumb-input__element_colorable,
+.scale-input__element_changeable,
+.scale-input__element_colorable,
+.scale-input__element_displayed,
+.slider-input__element_changeable,
+.slider-input__element_colorable,
+.slider-input__element_selectable
   display: flex
   margin-left: 15px
+
+.slider-input__element_selectable
+  position: relative
 
 .input-control__value-minus,
 .input-control__value-plus,
@@ -34,7 +50,9 @@
 .thumb-input__element_colorable-text,
 .scale-input__element-text,
 .thumb-input-value_changeable,
-.scale-input-value_changeable
+.scale-input-value_changeable,
+.slider-input-value_changeable,
+.slider-input__element_colorable-text
   height: 20px
   width: 60px
   text-align: center
@@ -60,17 +78,40 @@
 .scale-input-value_displayed
   width: 103px
 
+.slider-input-value_selectable
+  width: 103px
+  height: 21px
+  background-color: #fff
+  border: 1px solid #ddd
+  border-radius: 4px
+  font-family: Montserrat, sans-serif
+  font-size: 12px
+  font-weight: 600
+  text-indent: 3px
+
+.slider-input-value-checkmark
+  position: absolute
+  top: 7px
+  right: 2px
+  font-family: Material Icons, sans-serif
+  font-size: 24px
+  font-style: normal
+  line-height: 8px
+  pointer-events: none
+
 .thumb-input__element_colorable-container,
-.scale-input__element-container
+.scale-input__element-container,
+.slider-input__element-container
   width: 22px
-  height: 22px
+  height: 21px
   display: flex
   flex-direction: column
   align-items: center
   gap: 30px
 
 .thumb-input__element_colorable-color,
-.scale-input__element-color
+.scale-input__element-color,
+.slider-input__element-color
   -webkit-appearance: none
   -moz-appearance: none
   appearance: none
@@ -82,11 +123,15 @@
   cursor: pointer
 
 .thumb-input__element_colorable-color::-webkit-color-swatch,
-.scale-input__element-color::-webkit-color-swatch
+.scale-input__element-color::-webkit-color-swatch,
+.slider-input__element-color::-webkit-color-swatch
   border-radius: 4px
-  border: 1px solid #ddd
+  border: none
 
 .thumb-input__element_colorable-color::-moz-color-swatch,
-.scale-input__element-color::-moz-color-swatch
+.scale-input__element-color::-moz-color-swatch,
+.slider-input__element-color::-moz-color-swatch
   border-radius: 4px
-  border: 1px solid #ddd
+  border: none
+  width: 19px
+  height: 19px
