--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -29,3 +29,11 @@ body
 
 input
   all: unset
+
+select
+  -webkit-appearance: none
+  -moz-appearance: none
+  appearance: none
+
+select::-ms-expand
+  display: none
