input mask in work

--- a/src/View/ViewController/ControlElements/ControlInputElement/ControlInputElement.sass
+++ b/src/View/ViewController/ControlElements/ControlInputElement/ControlInputElement.sass
@@ -63,6 +63,9 @@
   border-radius: 4px
   padding: 0
 
+.thumb-input__element_colorable-text
+  font-size: 12px
+
 .control-input-selectable,
 .scale-input-value_displayed
   height: 20px
