onmousedown in progress

--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -20,6 +20,7 @@
 @import "src/View/ViewSlider/ViewRuler/ViewRuler.sass"
 @import "src/View/ViewSlider/ViewRuler/ViewRulerContainer/ViewRulerContainer.sass"
 @import "src/View/ViewSlider/ViewScaleContainer/ViewScaleContainer.sass"
+@import "src/View/ViewController/ControlElements/ControlLogic/ControlInputThumbs/ControlInputThumbs.sass"
 
 body
   -ms-user-select: none
